2003-11-11  Michael Banck  <mbanck@gmx.net>

	* configure.in (AC_REPLACE_FUNCS): New directive, including
	snprintf and strncasecmp for now.
	* configure: Regenerated.
	* src/babelconfig.h.in: Regenerated.
	* src/Makefile.am (libopenbabel_la_LIBADD): Added @LTLIBOBJS@.
	(babel_LDADD): Added @LIBOBJS@.
	* src/Makefile.in: Regenerated.
	* src/mol.h [!HAVE_SNPRINTF] (snprintf): New declaration.
	[!HAVE_STRNCASECMP] (strncasecmp): Likewise.
	* src/snprintf.c: New file, taken from Mark Martinec.
	* src/snprintf.h: New file, taken from Mark Martinec.
	* src/strncasecmp.c: New file, taken from gnulib.

2003-11-10  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/main.cpp: Silently ignore cases with 0 atoms in a
	molecule. This is frequently due to trailing empty lines in a file.

	* test/Makefile.am: Separate the tests in obtest into distinct
	programs and tests for a more accurate "make check" result.

	* test/main.cpp, test/matrixtest.cpp, test/ringtest.cpp,
	test/smartstest.cpp: Ditto.

	* test/cml.sh: Skip the test in "make check" if the directory
	doesn't exist.

	* test/test-set.sh: If the test-set directory exists, then run it,
	otherwise skip the test.

2003-11-10  Michael Banck  <mbanck@gmx.net>

	* src/math/Makefile.am (AM_CPPFLAGS): New directive, adding
	$(top_srcdir)/src to includes to make building in a seperate
	build-directory possible.
	* test/Makefile.am (AM_CPPFLAGS): Likewise.
	* tools/Makefile.am (AM_CPPFLAGS): Likewise.
	
2003-11-08  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* configure, */Makefile.in: Updated with current autoconf, automake.

	* src/cml.cpp: Add OB_VERSION const to use BABEL_VERSION
	definition (automagically updated from babelconfig.h).

	* src/extable.txt: Add .ins ShelX extension.

	* test/cml.sh, test/cmltest/roundtrip.sh, test/cmltest/test.sh:
	Shell scripts to run the CML test suite.
	
	* test/smartstest.cpp: Add more debugging information if SMARTS
	tests fail.
